--- a/01-data_processing.ipynb
+++ b/01-data_processing.ipynb
@@ -9,10 +9,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "import re\n",
-    "%matplotlib inline"
+    "import re"
    ]
   },
   {
@@ -312,16 +309,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "1f61b30b-94e4-4640-bf00-82f80777e4f9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_clean = df_clean[~df_clean[\"Zipcode\"].isnull()]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "a31c43a6-7975-4e7e-ba21-3aa72bd8603a",
    "metadata": {},
@@ -518,8 +505,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 6.39 s\n",
-      "Wall time: 6.9 s\n"
+      "CPU times: total: 6.23 s\n",
+      "Wall time: 6.88 s\n"
      ]
     }
    ],
@@ -618,8 +605,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 6.41 s\n",
-      "Wall time: 6.9 s\n"
+      "CPU times: total: 6.53 s\n",
+      "Wall time: 7.08 s\n"
      ]
     }
    ],
@@ -931,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 34,
    "id": "285960c9-ab02-43ea-b44e-7187b1bf7dac",
    "metadata": {},
    "outputs": [
@@ -951,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 35,
    "id": "0dca897f-4337-43b6-8112-7200ad8ba142",
    "metadata": {},
    "outputs": [],
@@ -961,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 36,
    "id": "adce8339-7c43-4059-b432-968f46f0cb14",
    "metadata": {},
    "outputs": [
@@ -979,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 37,
    "id": "b0dd5a51-5c7a-4788-8f80-c9045d0ed206",
    "metadata": {},
    "outputs": [],
@@ -989,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 38,
    "id": "991d979c-c9da-4cd6-a1c2-379f95c479b4",
    "metadata": {},
    "outputs": [
@@ -1007,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 39,
    "id": "14c2b79d-4a5f-40fe-a260-beb320af9fda",
    "metadata": {},
    "outputs": [],
@@ -1017,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 40,
    "id": "282d98ac-9c60-47f1-a660-d49a5253a529",
    "metadata": {},
    "outputs": [
@@ -1035,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 41,
    "id": "b4e7bba0-1f02-4fae-b8a6-09757edd83d4",
    "metadata": {},
    "outputs": [],
@@ -1045,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 42,
    "id": "f1616e18-6fa5-497e-b574-f94e50673eeb",
    "metadata": {},
    "outputs": [
@@ -1063,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 43,
    "id": "577e162f-dbb1-41ec-88d5-1afb76eae78a",
    "metadata": {},
    "outputs": [],
@@ -1073,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 44,
    "id": "d78f6c5f-021b-4ac0-a920-2f05e798c16c",
    "metadata": {},
    "outputs": [
@@ -1115,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 45,
    "id": "7bf1c856-f1d7-4af4-89fb-47141e8cc55e",
    "metadata": {},
    "outputs": [
@@ -1126,7 +1113,7 @@
        "       'Clarksdale', 'American Fork-Pleasant Grove'], dtype=object)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 46,
    "id": "d19b22d4-54a9-4bf3-92e2-ae5a65237203",
    "metadata": {},
    "outputs": [
@@ -1148,7 +1135,7 @@
        "       'Woods'], dtype=object)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 47,
    "id": "d62ae107-d6ae-4e70-a7fc-5dfb8bf6e53e",
    "metadata": {},
    "outputs": [
@@ -1177,7 +1164,7 @@
        "(49,)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1188,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 48,
    "id": "2f066583-99b0-4636-a9bd-08617c481b2f",
    "metadata": {},
    "outputs": [
@@ -1202,7 +1189,7 @@
        "       'ID', 'ND', 'MT', 'SD', 'WY'], dtype=object)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 49,
    "id": "24b7b194-153c-423c-9b9b-39b901f32dee",
    "metadata": {},
    "outputs": [],
@@ -1252,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 50,
    "id": "7ae9d4a7-74a0-4bc8-9aba-ca1b8d7cb9e2",
    "metadata": {},
    "outputs": [],
@@ -1262,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 51,
    "id": "8ae7201c-f290-45f2-97fb-0c1c0a94703e",
    "metadata": {},
    "outputs": [
@@ -1274,7 +1261,7 @@
        "Name: Road_Type, dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1293,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 52,
    "id": "3b95797e-6b6a-4b45-80a8-9ff7892a56c9",
    "metadata": {},
    "outputs": [],
@@ -1311,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 53,
    "id": "240c0bce-4b2e-489d-9d8e-00ead4c0520b",
    "metadata": {},
    "outputs": [
@@ -1321,7 +1308,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 7327722 entries, 0 to 7728393\n",
-      "Data columns (total 37 columns):\n",
+      "Data columns (total 36 columns):\n",
       " #   Column             Dtype  \n",
       "---  ------             -----  \n",
       " 0   ID                 object \n",
@@ -1335,34 +1322,33 @@
       " 8   City               object \n",
       " 9   County             object \n",
       " 10  State              object \n",
-      " 11  Zipcode            object \n",
-      " 12  Temperature(F)     float64\n",
-      " 13  Humidity(%)        float64\n",
-      " 14  Pressure(in)       float64\n",
-      " 15  Visibility(mi)     float64\n",
-      " 16  Wind_Speed(mph)    float64\n",
-      " 17  Precipitation(in)  float64\n",
-      " 18  Weather_Condition  object \n",
-      " 19  Amenity            bool   \n",
-      " 20  Bump               bool   \n",
-      " 21  Crossing           bool   \n",
-      " 22  Give_Way           bool   \n",
-      " 23  Junction           bool   \n",
-      " 24  No_Exit            bool   \n",
-      " 25  Railway            bool   \n",
-      " 26  Roundabout         bool   \n",
-      " 27  Station            bool   \n",
-      " 28  Stop               bool   \n",
-      " 29  Traffic_Calming    bool   \n",
-      " 30  Traffic_Signal     bool   \n",
-      " 31  Turning_Loop       bool   \n",
-      " 32  Day/Night          object \n",
-      " 33  Date               object \n",
-      " 34  Weather_Category   object \n",
-      " 35  Weather_Intensity  object \n",
-      " 36  Road_Type          object \n",
-      "dtypes: bool(13), float64(9), int64(1), object(14)\n",
-      "memory usage: 1.5+ GB\n"
+      " 11  Temperature(F)     float64\n",
+      " 12  Humidity(%)        float64\n",
+      " 13  Pressure(in)       float64\n",
+      " 14  Visibility(mi)     float64\n",
+      " 15  Wind_Speed(mph)    float64\n",
+      " 16  Precipitation(in)  float64\n",
+      " 17  Weather_Condition  object \n",
+      " 18  Amenity            bool   \n",
+      " 19  Bump               bool   \n",
+      " 20  Crossing           bool   \n",
+      " 21  Give_Way           bool   \n",
+      " 22  Junction           bool   \n",
+      " 23  No_Exit            bool   \n",
+      " 24  Railway            bool   \n",
+      " 25  Roundabout         bool   \n",
+      " 26  Station            bool   \n",
+      " 27  Stop               bool   \n",
+      " 28  Traffic_Calming    bool   \n",
+      " 29  Traffic_Signal     bool   \n",
+      " 30  Turning_Loop       bool   \n",
+      " 31  Day/Night          object \n",
+      " 32  Date               object \n",
+      " 33  Weather_Category   object \n",
+      " 34  Weather_Intensity  object \n",
+      " 35  Road_Type          object \n",
+      "dtypes: bool(13), float64(9), int64(1), object(13)\n",
+      "memory usage: 1.4+ GB\n"
      ]
     }
    ],
@@ -1372,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 54,
    "id": "3c6f8c6e-0559-4900-82bc-1743fbd63819",
    "metadata": {},
    "outputs": [],
