completed data analysis

--- a/01-data_processing.ipynb
+++ b/01-data_processing.ipynb
@@ -517,8 +517,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 16.7 s\n",
-      "Wall time: 17.8 s\n"
+      "CPU times: total: 18.3 s\n",
+      "Wall time: 19 s\n"
      ]
     }
    ],
@@ -566,8 +566,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 5.77 s\n",
-      "Wall time: 6.15 s\n"
+      "CPU times: total: 6.34 s\n",
+      "Wall time: 6.6 s\n"
      ]
     }
    ],
@@ -666,8 +666,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 6.02 s\n",
-      "Wall time: 6.52 s\n"
+      "CPU times: total: 6.34 s\n",
+      "Wall time: 6.67 s\n"
      ]
     }
    ],
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "991d979c-c9da-4cd6-a1c2-379f95c479b4",
    "metadata": {},
    "outputs": [
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "id": "282d98ac-9c60-47f1-a660-d49a5253a529",
    "metadata": {},
    "outputs": [
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 39,
    "id": "f1616e18-6fa5-497e-b574-f94e50673eeb",
    "metadata": {},
    "outputs": [
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 40,
    "id": "d78f6c5f-021b-4ac0-a920-2f05e798c16c",
    "metadata": {},
    "outputs": [
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
    "id": "7bf1c856-f1d7-4af4-89fb-47141e8cc55e",
    "metadata": {},
    "outputs": [
@@ -1107,7 +1107,7 @@
        "       'Clarksdale', 'American Fork-Pleasant Grove'], dtype=object)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
    "id": "d19b22d4-54a9-4bf3-92e2-ae5a65237203",
    "metadata": {},
    "outputs": [
@@ -1129,7 +1129,7 @@
        "       'Ness'], dtype=object)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "id": "2f066583-99b0-4636-a9bd-08617c481b2f",
    "metadata": {},
    "outputs": [
@@ -1162,7 +1162,7 @@
        "       'ID', 'ND', 'MT', 'SD', 'WY'], dtype=object)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 44,
    "id": "24b7b194-153c-423c-9b9b-39b901f32dee",
    "metadata": {},
    "outputs": [],
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "id": "7ae9d4a7-74a0-4bc8-9aba-ca1b8d7cb9e2",
    "metadata": {},
    "outputs": [],
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
    "id": "8ae7201c-f290-45f2-97fb-0c1c0a94703e",
    "metadata": {},
    "outputs": [
@@ -1234,7 +1234,7 @@
        "Name: Road_Type, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 47,
    "id": "5fa29448-e221-4100-a1c5-332f64e51dba",
    "metadata": {},
    "outputs": [],
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 48,
    "id": "425d4bf9-ccdf-4749-9dca-1ab11e6ea738",
    "metadata": {},
    "outputs": [
@@ -1281,7 +1281,7 @@
        "Name: Duration(min), dtype: float64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 49,
    "id": "093203de-c72c-4fb1-814e-9d5d3455a67d",
    "metadata": {},
    "outputs": [],
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 50,
    "id": "3af79ec7-f1ce-4aa6-ae57-7bd60c469466",
    "metadata": {},
    "outputs": [],
@@ -1320,12 +1320,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 51,
    "id": "b10befbd-9a0c-42f8-b9b7-906ec9c47842",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean[\"Day\"] = df_clean[\"Start_Time\"].dt.day_name()"
+    "df_clean[\"Day\"] = df_clean[\"Start_Time\"].dt.day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "c47ee995-845c-46dc-9ef2-6ac88be7682e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean[\"Day_of_Week\"] = df_clean[\"Start_Time\"].dt.dayofweek"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "4caf8713-6adb-477a-825c-d30dca39917d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean[\"Month\"] = df_clean[\"Start_Time\"].dt.month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "c6dc37e6-5208-4043-a6e3-575264fd327e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean[\"Year\"] = df_clean[\"Start_Time\"].dt.year"
    ]
   },
   {
@@ -1333,22 +1363,42 @@
    "id": "125f3441-5ed9-49ae-bf4c-b6d11617667e",
    "metadata": {},
    "source": [
-    "Rename column"
+    "Convert columns to boolean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 55,
    "id": "3b95797e-6b6a-4b45-80a8-9ff7892a56c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_clean = df_clean.rename(columns={\"Sunrise_Sunset\": \"Day/Night\"})"
+    "df_clean = df_clean.rename(columns={\"Sunrise_Sunset\": \"Is_Night\"})\n",
+    "df_clean[\"Is_Night\"] = df_clean[\"Is_Night\"] == \"Night\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 56,
+   "id": "5b1e42ed-9587-4f44-96b6-301a0f44dcab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean = df_clean.rename(columns={\"Road_Type\": \"Is_Highway\"})\n",
+    "df_clean[\"Is_Highway\"] = df_clean[\"Is_Highway\"] == \"Highway\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cdb39b0-8f3c-446f-bb42-89d0f304f638",
+   "metadata": {},
+   "source": [
+    "Final columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "id": "7aec9244-a4ac-41e7-882a-0e1fab081613",
    "metadata": {},
    "outputs": [
@@ -1385,19 +1435,22 @@
        "Traffic_Calming      0\n",
        "Traffic_Signal       0\n",
        "Turning_Loop         0\n",
-       "Day/Night            0\n",
+       "Is_Night             0\n",
        "Date                 0\n",
        "ID                   0\n",
        "Weather_Category     0\n",
        "Weather_Intensity    0\n",
-       "Road_Type            0\n",
+       "Is_Highway           0\n",
        "Duration(min)        0\n",
        "Hour                 0\n",
        "Day                  0\n",
+       "Day_of_Week          0\n",
+       "Month                0\n",
+       "Year                 0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 58,
    "id": "dde417f2-1af4-4bbf-ac9d-c0dd52373b3a",
    "metadata": {},
    "outputs": [
@@ -1434,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 59,
    "id": "240c0bce-4b2e-489d-9d8e-00ead4c0520b",
    "metadata": {},
    "outputs": [
@@ -1444,7 +1497,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 7223677 entries, 0 to 7728393\n",
-      "Data columns (total 39 columns):\n",
+      "Data columns (total 42 columns):\n",
       " #   Column             Dtype         \n",
       "---  ------             -----         \n",
       " 0   Severity           int64         \n",
@@ -1477,17 +1530,20 @@
       " 27  Traffic_Calming    bool          \n",
       " 28  Traffic_Signal     bool          \n",
       " 29  Turning_Loop       bool          \n",
-      " 30  Day/Night          object        \n",
+      " 30  Is_Night           bool          \n",
       " 31  Date               datetime64[ns]\n",
       " 32  ID                 object        \n",
       " 33  Weather_Category   object        \n",
       " 34  Weather_Intensity  object        \n",
-      " 35  Road_Type          object        \n",
+      " 35  Is_Highway         bool          \n",
       " 36  Duration(min)      float64       \n",
       " 37  Hour               int64         \n",
-      " 38  Day                object        \n",
-      "dtypes: bool(13), datetime64[ns](3), float64(10), int64(2), object(11)\n",
-      "memory usage: 1.5+ GB\n"
+      " 38  Day                int64         \n",
+      " 39  Day_of_Week        int64         \n",
+      " 40  Month              int64         \n",
+      " 41  Year               int64         \n",
+      "dtypes: bool(15), datetime64[ns](3), float64(10), int64(6), object(8)\n",
+      "memory usage: 1.6+ GB\n"
      ]
     }
    ],
@@ -1497,12 +1553,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 60,
    "id": "3c6f8c6e-0559-4900-82bc-1743fbd63819",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_clean.to_csv(\"data/US_Accidents_March23_Clean.csv\", index=False)"
+    "df_clean.to_csv(\"data/US_Accidents_March23_Clean.csv\", index=False)"
    ]
   },
   {
