completed data analysis

--- a/02-data_analysis.ipynb
+++ b/02-data_analysis.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0c3b879b-3e2e-4bd0-9c3e-def75e65d0ed",
+   "metadata": {},
+   "source": [
+    "The rendered version is at `/pdf_notebooks/02-data_analysis.pdf` "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "daf1a744-db7c-46fa-8ee0-5be71d5b42ac",
